@@ -72,6 +72,28 @@
     <istrue value="${test.use.je}"/>
   </condition>
 
+  <!-- Values for analysis -->
+  <property name="analysis.jvm.args"
+	    value="-server
+		   -XX:+UseParallelGC
+		   -XX:+UseFastAccessorMethods
+		   -XX:+AggressiveOpts
+		   -XX:+MaxFDLimit
+		   -XX:NewSize=512m
+		   -Xms700m
+		   -Xmx2g"/>
+  <!-- Set analysis.use.data.store.server to perform analysis using the
+       networked data store -->
+  <condition
+     property="analysis.data.store.class"
+     value="com.sun.sgs.impl.service.data.store.net.DataStoreClient"
+     else="com.sun.sgs.impl.service.data.store.DataStoreImpl">
+    <istrue value="${analysis.use.data.store.server}"/>
+  </condition>
+  <property name="analysis.data.store.server.run" value="true"/>
+  <property name="analysis.data.store.server.host" value="localhost"/>
+  <property name="analysis.data.store.server.port" value="44530"/>
+
   <!-- Properties for Berkeley DB libraries -->
   <!-- The caller should set the bdb.lib.dir property to a directory
        containing the full set of JAR and native library files for
@@ -1047,6 +1069,25 @@
     </javac>
   </target>
 
+  <!-- Builds the analysis code -->
+  <target name="analysis-classes" depends="build"
+          description="Builds the analysis code">
+    <mkdir dir="${build.dir}/analysis/classes"/>
+    <depend srcdir="analysis"
+            destdir="${build.dir}/analysis/classes"
+	    cache="${build.dir}/depend"
+	    closure="true"/>
+    <javac srcdir="analysis/server/j2se"
+	   destdir="${build.dir}/analysis/classes"
+	   includeAntRuntime="no"
+	   debug="on"
+	   source="${javac.source}"
+	   classpathref="server.classpath"
+	   includes="**/*.java">
+      <compilerarg value="${javac.compilerargs}"/>
+    </javac>
+  </target>
+
   <!-- Runs the example ChatApp (server) -->
   <target name="example-chat-app" depends="example-classes"
           description="Runs the example ChatApp (server)">
@@ -1080,6 +1121,47 @@
         <pathelement location="${build.dir}/example/classes"/>
         <path refid="client.classpath"/>
       </classpath>
+    </java>
+  </target>
+
+  <!-- Runs the task timing analysis -->
+  <target name="analysis" depends="analysis-classes"
+          description="Runs the task timing analysis">
+    <mkdir dir="${build.dir}/analysis"/>
+    <delete dir="${build.dir}/analysis/logs"/>
+    <delete dir="${build.dir}/analysis/data"/>
+    <delete dir="${build.dir}/analysis/dsdb"/>
+    <mkdir dir="${build.dir}/analysis/logs"/>
+    <mkdir dir="${build.dir}/analysis/data"/>
+    <mkdir dir="${build.dir}/analysis/dsdb"/>
+    <java classname="com.sun.sgs.impl.kernel.Kernel"
+	  fork="true">
+      <jvmarg line="${analysis.jvm.args}"/>
+      <sysproperty key="com.sun.sgs.config.file"
+		   file="analysis/System.properties"/>
+      <sysproperty key="java.library.path" 
+		   file="${bdb.lib.dir}"/>
+      <sysproperty key="java.util.logging.config.file"
+		   file="${test.logging}"/>
+      <sysproperty key="com.sun.sgs.app.root"
+		   file="${build.dir}/analysis"/>
+      <sysproperty
+	 key="com.sun.sgs.impl.service.data.store.db.environment.class"
+	 value="${test.bdb.env}"/>
+      <sysproperty
+	 key="com.sun.sgs.impl.service.data.DataServiceImpl.data.store.class"
+	 value="${analysis.data.store.class}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.run"
+		   value="${analysis.data.store.server.run}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.host"
+		   value="${analysis.data.store.server.host}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.port"
+		   value="${analysis.data.store.server.port}"/>
+      <classpath>
+        <pathelement location="${build.dir}/analysis/classes"/>
+        <path refid="server.classpath"/>
+      </classpath>
+      <arg value="analysis/AnalysisApplication.properties"/>
     </java>
   </target>
 
@@ -1188,6 +1270,8 @@
       com.sun.sgs.impl.service.data.store.net.server.run = true
       com.sun.sgs.impl.service.data.DataServiceImpl.data.store.class = \
         com.sun.sgs.impl.service.data.store.net.DataStoreClient
+      com.sun.sgs.impl.service.data.store.db.environment.class = \
+        ${test.bdb.env}
     </echo>
     <echo file="${test.server.dir}/logging.config">
       .level = ${test.server.level}
